--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -130,13 +130,13 @@ ul.nav {
   font-size: 32px;
   font-family: "Roboto Slab", serif;
   font-weight: bold;
-  margin-left: 15px;
+  margin-left: 13px;
   color: white;
   letter-spacing: 1px;
 }
 
 .nombre h1 {
-  margin-left: 15px;
+  margin-left: 13px;
   font-size: 56px;
   font-family: "Roboto Slab", serif;
   font-weight: bold;
@@ -146,7 +146,7 @@ ul.nav {
 .titulo h3 {
   font-size: 28px;
   font-family: "Roboto", sans-serif;
-  margin: 0 0 32px 0;
+  margin: 0 0 18px 20px;
   width: 460px;
   letter-spacing: 1px;
   color: #8AB0AB;
@@ -186,6 +186,9 @@ ul.nav {
   width: 100%;
 }
 
+footer {
+  margin-top: 10px;
+}
 footer span {
   font-size: 12px;
   justify-content: center;
