--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -236,7 +236,7 @@ ul.nav {
         font-size: 32px;
         font-family: $robotoSlab;
         font-weight: bold;
-        margin-left: 15px;
+        margin-left: 13px;
         color:$withe;
         letter-spacing: 1px;
     }
@@ -244,7 +244,7 @@ ul.nav {
 
 .nombre{
     h1{
-        margin-left: 15px;
+        margin-left: 13px;
         font-size: 56px;
         font-family: $robotoSlab;
         font-weight: bold;
@@ -256,10 +256,11 @@ ul.nav {
     h3{
         font-size: 28px;
         font-family: $roboto;
-        margin:0 0 32px 0;
+        margin:0 0 18px 20px;
         width: 460px;
         letter-spacing: 1px;
         color: $cambridgeBlue;
+        
 
     }
 }
@@ -291,9 +292,11 @@ ul.nav {
     bottom: 0px;
     left: 0px;
     width: 100%;
+
 }
 
 footer {
+    margin-top: 10px;
     span{
         font-size: 12px;
         justify-content: center;
